# bare-learning

./: Cargo.toml  nn.blnn
.github/workflows/: doc.yml
examples/: test.rs
src/: lib.rs  network.rs  randomizer.rs  utils.rs
